--- a/CPP01/ex03/Makefile
+++ b/CPP01/ex03/Makefile
@@ -6,14 +6,14 @@
 #    By: kschelvi <kschelvi@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2024/02/12 17:56:23 by kschelvi      #+#    #+#                  #
-#    Updated: 2024/02/12 17:56:58 by kschelvi      ########   odam.nl          #
+#    Updated: 2024/02/13 13:27:50 by kschelvi      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Unnecessary_violence
 
 CXX = c++
-CXXFLAGS = -Werror -Wall -Wextra -std=c++98
+CXXFLAGS = -Werror -Wall -Wextra -g -std=c++98
 
 SRC = ./main.cpp ./Weapon.cpp ./HumanA.cpp ./HumanB.cpp
 OBJ = $(SRC:%.cpp=%.o)
